--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
     },
      "require-dev": {
         "behat/mink": "^1.10",
+        "php-http/mock-client": "^1.5",
         "phpspec/prophecy-phpunit": "^2.0",
         "phpunit/phpunit": "^9",
         "symfony/phpunit-bridge": "^5.3.0"
@@ -51,7 +52,8 @@
             "drupal/core-composer-scaffold": true,
             "drupal/core-project-message": true,
             "phpstan/extension-installer": true,
-            "dealerdirect/phpcodesniffer-composer-installer": true
+            "dealerdirect/phpcodesniffer-composer-installer": true,
+            "php-http/discovery": true
         },
         "sort-packages": true
     },
