--- a/web/modules/custom/rsvplist/rsvplist.routing.yml
+++ b/web/modules/custom/rsvplist/rsvplist.routing.yml
@@ -4,4 +4,19 @@ rsvplist.formdemo:
     _form: '\Drupal\rsvplist\Form\RSVPForm'
     _title: 'RSVP List'
   requirements:
-    _permission: 'access content'
+    _permission: 'view rsvplist'
+rsvplist.admin_settings:
+  path: '/admin/config/content/rsvplist'
+  defaults:
+    _form: '\Drupal\rsvplist\Form\RSVPSettingsForm'
+    _title: 'RSVP List Settings'
+  requirements:
+    _permission: 'administer rsvplist'
+
+rsvplist.report:
+  path: '/admin/reports/rsvplist'
+  defaults:
+    _controller: '\Drupal\rsvplist\Controller\ReportController::report'
+    _title: 'List of RSVPs'
+  requirements:
+    _permission: 'access rsvplist report'
